--- a/index.html
+++ b/index.html
@@ -93,15 +93,7 @@
         <p><strong>📞 Phone:</strong> +91 8878447888</p>
         
 <div class="map-box">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.7118244975544!2d77.16611487588825!3d24.266205864197463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39773950f5596489%3A0x6b3b5550c60c874e!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1shi!2sin!4v1716000000000!5m2!1shi!2sin" 
-        width="100%" 
-        height="250" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.485644784742!2d77.1264858!3d24.3295842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39797371994e6629%3A0x868b75f82260e0a5!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1shi!2sin!4v1700000000000" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 
             </section>
