--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="loading">
             <img src="NAMASKAR" alt="" class="">
         </div>
-        <div class="NAMASKAR">NAMASKAR<span class="NAMASKAR">loading...</span>NAMASKAR</div>
+        <div class=""><span class=""></span></div>
         <div class="progress-container">
             <div class="progress-bar"></div>
         </div>
