--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div id="deadline">
-        <div class="loading">
-            <img src="NAMASKAR" alt="" class="">
+        <div class="">
+            <img src="" alt="" class="">
         </div>
         <div class=""><span class=""></span></div>
         <div class="progress-container">
