--- a/index.html
+++ b/index.html
@@ -91,14 +91,17 @@
     <div class="contact-details">
         <p><strong>📍 Address:</strong> Gram Awan, Tehsil Raghogarh, Guna (M.P.)</p>
         <p><strong>📞 Phone:</strong> +91 8878447888</p>
-        
-<div class="map-box">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.485644784742!2d77.1264858!3d24.3295842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39797371994e6629%3A0x868b75f82260e0a5!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1shi!2sin!4v1700000000000" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="map-box" style="margin-top: 15px; border-radius: 10px; overflow: hidden; border: 1px solid #ccc;">
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3632.441864192837!2d77.202305!3d24.435441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3970fd6290000001%3A0xc6657805908a7322!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1sen!2sin!4v1700000000000" 
+        width="100%" 
+        height="250" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
 </div>
-
-            </section>
-
-        </div>
 
         <footer class="school-footer">
             <div class="social-links">
