--- a/index.html
+++ b/index.html
@@ -86,16 +86,11 @@
 </section>
 
             </section>
-<section id="contact" class="section-box">
-    <div class="section-title">Sampark Karein</div>
-    <div class="contact-details">
-        <p><strong>📍 Address:</strong> Gram Awan, Tehsil Raghogarh, Guna (M.P.)</p>
-        <p><strong>📞 Phone:</strong> +91 8878447888</p>
-        <div class="map-box" style="margin-top: 15px; border-radius: 10px; overflow: hidden; border: 1px solid #ccc;">
+<div class="map-box" style="margin-top: 15px; border-radius: 10px; overflow: hidden; border: 2px solid #002e5b;">
     <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3632.441864192837!2d77.202305!3d24.435441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3970fd6290000001%3A0xc6657805908a7322!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1sen!2sin!4v1700000000000" 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.204683515456!2d77.0673456!3d24.0238889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397983692694b92b%3A0xc6657c9135a505b3!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" 
         width="100%" 
-        height="250" 
+        height="300" 
         style="border:0;" 
         allowfullscreen="" 
         loading="lazy" 
