--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 </section>
 
             </section>
-<div class="map-box" style="margin-top: 15px; border-radius: 10px; overflow: hidden; border: 2px solid #002e5b;">
+            <div class="map-box" style="margin-top: 15px; border-radius: 10px; overflow: hidden; border: 2px solid #002e5b;">
     <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.204683515456!2d77.0673456!3d24.0238889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397983692694b92b%3A0xc6657c9135a505b3!2sGanesh%20Vidya%20Mandir%20Higher%20Secondary%20School%20Awan!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3623.123!2d77.1685!3d24.2673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDE2JzAyLjMiTiA3N8KwMTAnMDYuNiJF!5e0!3m2!1shi!2sin!4v1234567898" 
         width="100%" 
-        height="300" 
+        height="350" 
         style="border:0;" 
         allowfullscreen="" 
         loading="lazy" 
