--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="deadline">
-        <div class="">
+        <div class="loading">
             <img src="" alt="" class="">
         </div>
         <div class=""><span class=""></span></div>
@@ -86,17 +86,21 @@
 </section>
 
             </section>
-            <div class="map-box" style="margin-top: 15px; border-radius: 10px; overflow: hidden; border: 2px solid #002e5b;">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3623.123!2d77.1685!3d24.2673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDE2JzAyLjMiTiA3N8KwMTAnMDYuNiJF!5e0!3m2!1shi!2sin!4v1234567898" 
-        width="100%" 
-        height="350" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
+<section id="contact" class="section-box">
+    <div class="section-title">Sampark Karein</div>
+    <div class="contact-details">
+        <p><strong>📍 Address:</strong> NH46
+        ग्राम आवन
+        तहसील राघौगढ़
+जिला गुना, मध्य प्रदेश</p>
+        <p><strong>📞 Phone:</strong> +91 8878447888</p>
+              <p><strong>📩 Email:</strong>gvmschool@gmail.com</p>
     </iframe>
 </div>
+
+            </section>
+
+        </div>
 
         <footer class="school-footer">
             <div class="social-links">
